fixed overflowing

--- a/src/index.scss
+++ b/src/index.scss
@@ -182,7 +182,7 @@ body {
   }
 
   .hero_wrapper {
-    width: 50rem;
+    width: fit-content;
 
     p {
       padding-inline: 1.5rem;
